# bot

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  example_bot.toml  shell.nix
.github/workflows/: check-commits.yml  docker-publish.yml  rust.yml
src/: ai_channel.rs  anti_hoisting.rs  config.rs  constants.rs  error.rs  main.rs  ocr.rs  task.rs
src/ai_channel/: user_message.rs
src/config/: file_watch.rs
src/task/: ai_channel.rs
src/task/ai_channel/: system_prompt.txt
